<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/activity_add_curriculum_padding_horizental"
    android:background="@drawable/curriculum_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/activity_add_curriculum_icon_size"
                        android:layout_height="@dimen/activity_add_curriculum_icon_size" />

                    <EditText
                        android:id="@+id/add_class_et_name"
                        android:layout_marginLeft="4dp"
                        android:textColor="@color/text_color_gray_deep"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:maxEms="10"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:textSize="@dimen/activity_add_curriculum_text_size"
                        android:hint="@string/add_curriculum_classname_hint" />

                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gray" />

                <TableRow
                    android:layout_width="match_parent"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="@dimen/activity_add_curriculum_icon_size"
                        android:layout_height="@dimen/activity_add_curriculum_icon_size" />

                    <EditText
                        android:id="@+id/add_class_et_location"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:textColor="@color/text_color_gray_deep"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:maxEms="14"
                        android:textSize="@dimen/activity_add_curriculum_text_size"
                        android:hint="@string/add_curriculum_classlocation_hint" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:id="@+id/add_class_time_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_curriculum_view_margin"
                android:orientation="vertical">

                <cn.edu.sdu.online.view.ClassTimeView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/add_class_addTimeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/add_curriculum_view_margin"
                android:background="@drawable/add_class_moretime_tv_bg"
                android:text="@string/add_curriculum_moreclasstime"
                android:drawableLeft="@drawable/add_class_add_time_tv_icon"
                android:textSize="@dimen/activity_add_curriculum_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_curriculum_view_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_class_bt_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/reborrow_button"
                    android:textColor="@color/white"
                    android:text="@string/mession_cancel" />

                <View
                    android:layout_width="2px"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/add_class_bt_confrim"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@drawable/reborrow_button"
                    android:text="@string/mession_confirm" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>